--- a/basic.css
+++ b/basic.css
@@ -1,54 +1,60 @@
-*{
+/* Base Styles */
+* {
     margin: 0;
     padding: 0;
-    font-family: 'poppins',sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
-#banner{
-    background-image: linear-gradient(rgba(0,0,0,0.5),#090172e0),url(008c75173308d7ae83aadb3d011303f1.jpg);
+
+/* Banner */
+#banner {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), #090172e0), url(woman-1139397_1280.jpg);
     background-size: cover;
     background-position: center;
-    height: 80vh;   
+    height: 80vh;
 }
-.Logo{
+
+.Logo {
     width: 250px;
     position: absolute;
     top: 4%;
     left: 10%;
 }
-.banner-text
-{
+
+.banner-text {
     text-align: center;
     color: white;
     padding-top: 180px;
 }
-.banner-text h1
-{
+
+.banner-text h1 {
     font-size: 130px;
-    font-family: 'Kaushan Script',cursive;
+    font-family: 'Kaushan Script', cursive;
 }
-.banner-text p
-{
+
+.banner-text p {
     font-size: 20px;
     font-style: italic;
 }
-.banner-btn
-{
-    margin: 70px auto 0;
 
+.banner-btn {
+    margin: 70px auto 0;
 }
-.banner-btn a{
+
+.banner-btn a {
     width: 150px;
-    text-decoration: none;
     display: inline-block;
+    text-decoration: none;
     margin: 0 10px;
-    page-break-after: 12px 0;
+    padding: 12px 0;
     color: white;
-    border: .5px solid white;
+    border: 0.5px solid white;
     position: relative;
     z-index: 1;
     transition: color 0.5s;
+    text-align: center;
 }
-.banner-btn a span{
+
+.banner-btn a span {
     width: 0;
     height: 100%;
     position: absolute;
@@ -58,14 +64,17 @@
     z-index: -1;
     transition: 0.5s;
 }
-.banner-btn a:hover span{
+
+.banner-btn a:hover span {
     width: 100%;
 }
+
 .banner-btn a:hover {
     color: #000;
 }
-#sideNav
-{
+
+/* Side Navigation */
+#sideNav {
     width: 250px;
     height: 100vh;
     position: fixed;
@@ -75,16 +84,19 @@
     z-index: 2;
     transition: 0.5s;
 }
-nav ul li{
+
+nav ul li {
     list-style: none;
     margin: 50px 20px;
 }
-nav ul li a{
+
+nav ul li a {
     text-decoration: none;
     color: white;
 }
-#manubtn
-{
+
+/* Menu Button */
+#manubtn {
     width: 50px;
     height: 50px;
     background: #090172e0;
@@ -96,57 +108,64 @@ nav ul li a{
     z-index: 3;
     cursor: pointer;
 }
-#manubtn img
-{
+
+#manubtn img {
     width: 20px;
     margin-top: 15px;
 }
-@media screen and (max-width: 770px){
-    .banner-text h1
-    {
+
+/* Responsive Banner */
+@media screen and (max-width: 770px) {
+    .banner-text h1 {
         font-size: 44px;
-            }   
-            .banner-btn a{
-                display: block;
-                margin: 20px auto;
-            }
+    }
+
+    .banner-btn a {
+        display: block;
+        margin: 20px auto;
+    }
 }
-/* feature */
-#feature
-{
+
+/* Feature Section */
+#feature {
     width: 100%;
     padding: 70px 0;
 }
-.title-text{
+
+.title-text {
     text-align: center;
-    padding-bottom: 70px ;
+    padding-bottom: 70px;
 }
-.title-text p{
-    margin: auto;
+
+.title-text p {
     font-size: 20px;
-    color: #090172e0;
     font-weight: bold;
+    color: #090172e0;
+    display: inline-block;
     position: relative;
     z-index: 1;
-    display: inline-block;
+    margin: auto;
 }
-.title-text p::after{
+
+.title-text p::after {
     content: '';
     width: 50px;
     height: 35px;
-    background: linear-gradient(#090172e0,#fff);
+    background: linear-gradient(#090172e0, #fff);
     position: absolute;
     top: -20px;
     left: 0;
     z-index: -1;
     transform: rotate(10deg);
     border-top-left-radius: 35px;
-    border-bottom-right-radius: 35px ;
+    border-bottom-right-radius: 35px;
 }
-.title-text h1{
+
+.title-text h1 {
     font-size: 50px;
 }
-.feature-box{
+
+.feature-box {
     width: 80%;
     margin: auto;
     display: flex;
@@ -154,29 +173,34 @@ nav ul li a{
     align-items: center;
     text-align: center;
 }
-.features{
+
+.features {
     flex-basis: 50%;
 }
-.features-img
-{
+
+.features-img {
     flex-basis: 50%;
     margin: auto;
 }
-.features-img img{
-width: 70%;
-border-radius: 10px;
+
+.features-img img {
+    width: 70%;
+    border-radius: 10px;
 }
-.features h1{
+
+.features h1 {
     text-align: left;
     margin-bottom: 10px;
     font-weight: 100;
     color: #090172e0;
 }
-.feature-desc{
+
+.feature-desc {
     display: flex;
     align-items: center;
     margin-bottom: 40px;
 }
+
 .feature-icon .fa {
     width: 50px;
     height: 50px;
@@ -186,218 +210,234 @@ border-radius: 10px;
     color: #090172e0;
     border: 1px solid #090172e0;
 }
-.feature-text p{
+
+.feature-text p {
     padding: 0 20px;
     text-align: initial;
 }
-@media screen and (max-width: 770px){
-    .title-text h1{
+
+@media screen and (max-width: 770px) {
+    .title-text h1 {
         font-size: 35px;
     }
-    .features{
+
+    .features,
+    .features-img {
         flex-basis: 100%;
     }
-    .features-img
-    {
-        flex-basis: 100%;
-    }
-    .features-img img{
+
+    .features-img img {
         width: 100%;
-        }
+    }
 }
 
-
-/* Service */
-
-#Service{
+/* Service Section */
+#Service {
     width: 100%;
     padding: 70px 0;
     background-color: lightgray;
 }
 
-.Service-box{
+.Service-box {
     width: 80%;
+    margin: auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    margin: auto;
-
 }
-.Single-Service{
+
+.Single-Service {
     flex-basis: 48%;
     text-align: center;
     border-radius: 7px;
     margin-bottom: 20px;
     color: white;
     position: relative;
-
 }
-.Single-Service{
+
+.Single-Service img {
     width: 100%;
     border-radius: 7px;
 }
 
-.Single-Service img{
-    width: 100%;
-    border-radius: 7px;
-}
-.OverLay{
+.OverLay {
     width: 100%;
     height: 100%;
     position: absolute;
     top: 0;
     border-radius: 7px;
     cursor: pointer;
-    background: linear-gradient(rgba(0,0,0,0.5),#090172e0);
+    background: linear-gradient(rgba(0, 0, 0, 0.5), #090172e0);
     opacity: 0;
     transition: 1s;
 }
-.Single-Service:hover .OverLay{
-    opacity: 1;
 
+.Single-Service:hover .OverLay {
+    opacity: 1;
 }
-.Services-Desc{
+
+.Services-Desc {
     width: 80%;
     position: absolute;
     bottom: 0;
     left: 50%;
-    opacity: 0;
     transform: translateX(-50%);
+    opacity: 0;
     transition: 1s;
 }
-hr{
+
+.Single-Service:hover .Services-Desc {
+    bottom: 40%;
+    opacity: 1;
+}
+
+.Services-Desc p {
+    font-size: 14px;
+}
+
+hr {
     background: #fff;
     height: 2px;
     border: 0;
     margin: 15px auto;
     width: 60%;
 }
-.Services-Desc p{
-    font-size: 14px;
-}
-.Single-Service:hover .Services-Desc{
-    bottom: 40%;
-    opacity: 1;
-}
 
-@media screen and (max-width: 770px){
-    .Single-Service{
+@media screen and (max-width: 770px) {
+    .Single-Service {
         flex-basis: 100%;
         margin-bottom: 30px;
     }
-    .Services-Desc p{
+
+    .Services-Desc p {
         font-size: 12px;
     }
-    hr{
+
+    hr {
         margin: 5px auto;
     }
-    .Single-Service:hover .Services-Desc
-    {
+
+    .Single-Service:hover .Services-Desc {
         bottom: 25% !important;
     }
 }
-/* Testimonial */
-#Testimonial
-{
-     width: 100%;
-        padding: 70px 0; 
+
+/* Testimonial Section */
+#Testimonial {
+    width: 100%;
+    padding: 70px 0;
 }
-.Testimonial-row
-{
+
+.Testimonial-row {
     width: 80%;
     margin: auto;
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
     flex-wrap: wrap;
+    align-items: flex-start;
 }
-.Testimonial-col
-{
+
+.Testimonial-col {
     flex-basis: 28%;
     padding: 10px;
     margin-bottom: 30px;
     border-radius: 5px;
     box-shadow: 0 10px 20px 3px #00968814;
     cursor: pointer;
-    transition: transform .5s ;
+    transition: transform 0.5s;
 }
-.Testimonial-col p{
-    font-size: 14px;    
+
+.Testimonial-col:hover {
+    transform: translateY(-7px);
 }
-.user{
+
+.Testimonial-col p {
+    font-size: 14px;
+}
+
+.user {
     display: flex;
     align-items: center;
     margin: 20px 0;
 }
-.user img{
+
+.user img {
     width: 40px;
     margin-right: 20px;
     border-radius: 3px;
 }
 
-.user-info .fa{
+.user-info .fa {
     margin-left: 10px;
     color: #090172e0;
     font-size: 20px;
 }
-.user-info  small{
+
+.user-info small {
     color: #090172e0;
 }
-.Testimonial-col:hover{
-    transform: translateY(-7px);
-}
-@media screen and (max-width: 770px){
-    .Testimonial-col{
+
+@media screen and (max-width: 770px) {
+    .Testimonial-col {
         flex-basis: 100%;
     }
 }
 
-/* footer */
-#footer{
-    
+/* Footer */
+#footer {
     padding: 100px 0 20px;
     background: #efefef;
     position: relative;
 }
-.footer-row{
-    widows: 80%;
+
+.footer-row {
+    width: 80%;
     margin: 0 auto;
-    display:flex;
+    display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
 }
-.footer-left,.footer-right {
+
+.footer-left,
+.footer-right {
     flex-basis: 45%;
     padding: 10px;
     margin-bottom: 20px;
 }
-.footer-right{
-    text-align:end
+
+.footer-right {
+    text-align: end;
 }
-.footer-row h1{
+
+.footer-row h1 {
     margin: 10px 0;
 }
-.footer-row p{
+
+.footer-row p {
     line-height: 35px;
 }
 
-.footer-left .fa,.footer-right .fa {
+.footer-left .fa,
+.footer-right .fa {
     font-size: 20px;
     color: #090172e0;
     margin: 10px;
 }
-.footer-img{
+
+.footer-img {
     max-width: 270px;
     opacity: 0.1;
     position: absolute;
     left: 50%;
     top: -15%;
-    transform: translate(-50%,50%);
+    transform: translate(-50%, 50%);
 }
-.Social-links{
+
+.Social-links {
     text-align: center;
 }
-.Social-links .fa{
+
+.Social-links .fa {
     height: 40px;
     width: 40px;
     font-size: 20px;
@@ -406,23 +446,28 @@ hr{
     margin: 40px 5px 0;
     color: #090172e0;
     cursor: pointer;
-    transition: .5s;
+    transition: 0.5s;
 }
-.Social-links .fa:hover{
+
+.Social-links .fa:hover {
     background: #090172e0;
     color: #fff;
     transform: translateY(-7px);
 }
-.Social-links p{
+
+.Social-links p {
     font-size: 12px;
     margin-top: 20px;
 }
-@media screen and (max-width: 770px){
-    .footer-left,.footer-right{
+
+@media screen and (max-width: 770px) {
+    .footer-left,
+    .footer-right {
         flex-basis: 100%;
         font-size: 14px;
     }
-    .footer-img{
+
+    .footer-img {
         top: 25% !important;
     }
 }
